fixed bottom text gap

--- a/assets/azhar.css
+++ b/assets/azhar.css
@@ -157,7 +157,7 @@ div.bottom_text {
   text-align: center;
   background: #f8f8f8;
   margin: 0;
-  padding: 3px 0;
+  padding: 10px;
 }
 /*************Product custom grid*******************/
 .product_grid_header h2 {
